# agent-crew-creator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts  vite.embed.config.ts
agent-template/: .env.example  Dockerfile  livekit_plugins_flashhead-0.3.6-py3-none-any.whl  pyproject.toml
agent-template/src/: config.py
agent-template/src/agent/: async_utils.py  delegation.py  gpu_ai_tts.py  main_agent.py  orchestrator.py  plugins.py
agent-template/src/observability/: __init__.py  langfuse_setup.py
agent-template/src/tools/: generate_image.py
agent-template/tests/: test_async_utils.py  test_plugins_llm.py  test_plugins_tts.py
client/: index.html
docs/: README.md  agent-runtime-template.md  architecture.md  authentication-and-authorization.md  database-and-migrations.md  development.md  embed-and-playground.md  environment-variables.md  http-and-express-routes.md  integrations.md  overview.md  pmf_crew_implementation_plan.docx  provisioning-and-deployment.md  repository-structure.md  security-and-operations.md  testing.md  trpc-routers.md
drizzle/: platformSchema.ts  relations.ts  schema.ts
k8s/: README.md  configmap.yaml  deploy-dify.sh  deployment.yaml  external-secret.yaml  ingress.yaml  namespace.yaml  rbac.yaml  research-crew-template.yml  service.yaml
player-ui/: Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: backfill-app-members.ts  guard-client-imports.sh  setup-crew-platform.sh
server/: agentRouter.ts  (+14 more)
(+156 files in other folders)
