[project]
name = "bionic-agent"
version = "0.3.0"
description = "LiveKit voice agent with two-brain architecture: fast primary LLM + Letta secondary executor"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.5.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "langfuse>=3.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "Pillow>=10.0.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
fallback = [
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
]
avatar = [
    "livekit-plugins-bithuman>=0.1.0",
]
all-providers = [
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-elevenlabs>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
    "livekit-plugins-bithuman>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
